--- a/.cocoadocs.yml
+++ b/.cocoadocs.yml
@@ -1,5 +1,5 @@
-highlight-color: "#FFAE0D"
-highlight-dark-color: "#E08A19"
+highlight-color: "#FE7A23"
+highlight-dark-color: "#DE6B1E"
 darker-color: "#BABABA"
 darker-dark-color: "#949494"
 background-color: "#F2F2F2"
